# tech-support-ai-agent

./: .env.example  .gitignore  alembic.ini  docker-compose.yaml  frontend.html  init.sql  main.py  pyproject.toml  readme.md
docs/: user-stories.md
docs/knowledge-base/: auth.md  billing.md  general.md  troubleshooting.md
migrations/: env.py
migrations/versions/: 5d578a54ab47_add_knowledge_chunks_table_for_vector_.py  5e60878757f2_rename_metadata_column_to_meta_in_.py  d7e26a6e6b95_update_vector_dimension_to_384.py
src/chat/: chat_routes.py  chat_schemas.py
src/claude/: claude_client.py  claude_enums.py  claude_service.py
src/config/: config.py
src/db/: db.py  ingest_knowledge.py  knowledge_chunk.py
src/embeddings/: embeddings_service.py
src/knowledge/: knowledge_repository.py  knowledge_service.py
