[project]
name = "tech-support-ai-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleksii Ablitsov",email = "oleksii.ablitsov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "asyncpg (>=0.29.0,<1.0.0)",
    "SQLAlchemy (>=2.0.0,<3.0.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "anthropic (>=0.55.0,<0.56.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "openai (>=1.93.0,<2.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "voyageai (>=0.3.2,<0.4.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
pylint = "^3.3.7"

